# SGD

./: Aktor.cpp  Aktor.h  CMakeLists.txt  Gracz.cpp  Gracz.h  Gracz2.cpp  Gracz2.h  LTexture.cpp  LTexture.h  Prostokat.cpp  Prostokat.h  SWIAT.cpp  SWIAT.h  Zasoby.cpp  Zasoby.h  main.cpp
